--- a/TestAppSMS/res/layout/activity_main.xml
+++ b/TestAppSMS/res/layout/activity_main.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:tools="http://schemas.android.com/tools"
-	android:orientation="vertical"
-	android:background="@color/grayBlack"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:background="@color/grayBlack"
+    android:orientation="vertical"
+    tools:context=".MainActivity" >
 	   
     <RelativeLayout 
         android:layout_width="match_parent"
@@ -29,29 +29,43 @@
             android:layout_centerVertical="true"
             android:layout_marginRight="18dp"
             android:layout_toLeftOf="@+id/selectContattiButton"
-            android:text="Seleziona Contatti"
+            android:text="Aggiungi contatto"
             android:textColor="@color/white" />
         
     </RelativeLayout>
-    
+
+    <ListView
+        android:id="@+id/listaContattiSelezionati"
+        android:layout_width="match_parent"
+        android:layout_height="151dp" 
+        >
+        
+    </ListView>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:gravity="center_vertical"
         android:orientation="horizontal" >
 
         <EditText
             android:layout_width="wrap_content"
-            android:layout_height="171dp"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
-            android:layout_weight="0.85"
-            android:inputType="text"
-            android:width="66dp" />
+            android:layout_weight="0.71"
+            android:inputType="textMultiLine"
+            android:width="66dp" >
+
+            <requestFocus />
+        </EditText>
 
         <Button
             android:id="@+id/inviaSMSButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="invia" />
-    </LinearLayout> 
+    </LinearLayout>
+ 
 </LinearLayout>
     
