--- a/TestAppSMS/res/layout/row.xml
+++ b/TestAppSMS/res/layout/row.xml
@@ -2,17 +2,27 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="horizontal" >
 
     <TextView
-        android:id="@+id/textViewList"
+        android:id="@+id/nomeEnumeroContatto"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="left"
+        android:layout_weight="0.5"
+        android:gravity="left"
+        android:padding="10dip"
+        android:text="Nome contatto"
+        android:textColor="@color/white"
+        android:textSize="22sp" />
+
+    <ImageButton
+        android:id="@+id/removeContatto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="" 
-        android:padding="10dip"
-        android:textSize="22sp"
-        android:textColor="@color/white"
-        
-        />
+        android:layout_gravity="right"
+        android:layout_marginRight="10dp"
+        android:background="@drawable/iconaremovecontatto"
+        android:contentDescription="Pulsante per aggiungere un contatto" />
 
 </LinearLayout>
