--- a/TestAppSMS/res/layout/row.xml
+++ b/TestAppSMS/res/layout/row.xml
@@ -17,7 +17,7 @@
         android:textSize="22sp" />
 
     <ImageButton
-        android:id="@+id/removeContatto"
+        android:id="@+id/removeContattoButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
