--- a/TestAppSMS/res/layout/activity_main.xml
+++ b/TestAppSMS/res/layout/activity_main.xml
@@ -19,19 +19,24 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
-            android:layout_marginRight="50dp"
+            android:layout_marginRight="3dp"
             android:background="@drawable/select_contatti"
             android:contentDescription="Pulsante per aggiungere un contatto" />
 
-        <TextView
-            android:id="@+id/selectContactTxt"
+        <AutoCompleteTextView
+            android:id="@+id/autoCompleteTextView1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="18dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:layout_centerInParent="false"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="2dp"
             android:layout_toLeftOf="@+id/selectContattiButton"
-            android:text="Aggiungi contatto"
-            android:textColor="@color/white" />
+            android:ems="10"
+            android:hint="Aggiungi contatto"
+            android:inputType="text"
+            android:minLines="1" />
         
     </RelativeLayout>
 
@@ -52,16 +57,15 @@
         android:orientation="horizontal" >
 
         <EditText
-        	android:id="@+id/textBoxSMS"
+            android:id="@+id/textBoxSMS"
             android:layout_width="0dip"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="2dp"
             android:layout_weight="0.71"
-            android:inputType="textMultiLine"
-            android:width="66dp" 
             android:hint="Messaggio"
-            
-            >
+            android:inputType="textMultiLine"
+            android:width="66dp" >
 
             <requestFocus />
         </EditText>
@@ -70,7 +74,9 @@
             android:id="@+id/inviaSMSButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginRight="3dp"
             android:text="invia" />
+
     </LinearLayout>
  
 </LinearLayout>
