--- a/TestAppSMS/res/layout/activity_main.xml
+++ b/TestAppSMS/res/layout/activity_main.xml
@@ -57,26 +57,52 @@
         android:orientation="horizontal" >
 
         <EditText
+            
             android:id="@+id/textBoxSMS"
             android:layout_width="0dip"
             android:layout_height="wrap_content"
+            android:width="66dp" 
+            
             android:layout_marginLeft="10dp"
             android:layout_marginRight="2dp"
             android:layout_weight="0.71"
             android:hint="Messaggio"
             android:inputType="textMultiLine"
-            android:width="66dp" >
-
-            <requestFocus />
+		>
+		
         </EditText>
+		
+        <LinearLayout
+        	
+        	android:layout_width="wrap_content"
+        	android:layout_height="wrap_content"
+        	android:layout_gravity="center"
+        	android:gravity="center"
+        	android:orientation="vertical" >
+            
 
-        <Button
-            android:id="@+id/inviaSMSButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="3dp"
-            android:text="invia" />
-
+        	<Button
+            	android:id="@+id/inviaSMSButton"
+            	android:layout_width="wrap_content"
+            	android:layout_height="40dp"
+            	android:layout_gravity="top"
+            	android:layout_marginRight="3dp"
+           		android:text="Invia"
+            />
+        	
+        	<TextView
+            	android:id="@+id/numCaratteriInseriti"
+            	android:layout_width="wrap_content"
+            	android:layout_height="10dp"
+            	android:layout_marginLeft="3dp"
+            	android:layout_marginBottom="0dp"
+            	android:text="0/160"
+            	android:textSize="9sp"
+            	android:textColor="@color/white" 
+            />
+        
+		</LinearLayout>
+		
     </LinearLayout>
  
 </LinearLayout>
